--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                       <li class="breadcrumb-item"><a href="#">Alla</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">Karlstad</li>
+                      <li class="breadcrumb-item active" aria-current="page">Ankeborg</li>
                     </ol>
                 </nav>
 
                 <div class="mt-4 mb-4">
-                    <h1 class="mb-3">REKO-ring Karlstad</h1>
+                    <h1 class="mb-3">REKO-ring Ankeborg</h1>
                     <div style="font-size: 0.875rem;"><i class="bi bi-calendar me-2"></i> Onsdag 24 April, 2024</div>
-                    <div style="font-size: 0.875rem;"><i class="bi bi-geo-alt me-2"></i> Sundstavägen 11</div>
+                    <div style="font-size: 0.875rem;"><i class="bi bi-geo-alt me-2"></i> Gräsandsvägen 11</div>
                     <div style="font-size: 0.875rem;"><i class="bi bi-clock me-2"></i> 18.00-21.00</div>
                 </div>
 
