--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             </div>
         </div> -->
 
-        <header class="bg-light p-3">
-            <nav class="mb-4" aria-label="breadcrumb">
+        <header class="bg-light shadow-sm p-4">
+            <nav style="font-size: 0.875rem;" class="mb-4" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Alla</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Ankeborg</li>
@@ -148,7 +148,7 @@
         </div> -->
 
         <div class="p-3">
-            <h4 class="mb-3">Veckans varor</h4>
+            <h4 class="mt-3 mb-3">Veckans varor</h4>
         
             <div v-for="(category, categoryName) in items" :key="categoryName" class="category">
                 <div class="d-flex justify-content-between align-items-end mb-2">
@@ -160,7 +160,7 @@
                     <div class="glide__track" data-glide-el="track">
                     <ul class="glide__slides">
                         <li class="glide__slide" v-for="(item, index) in category" :key="index">
-                        <img @click="openFormModal" style="width:100%" :src="item.image" :alt="item.alt">
+                            <img @click="openFormModal" style="width:100%" :src="item.image" :alt="item.alt">
                         </li>
                     </ul>
                     </div>
