--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue with Bootstrap Test</title>
+    <title>Test</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,23 +14,13 @@
 
     <style>
 
-        header {
-            background-color: #696969;
-            color: white;
-        }
-
         .breadcrumb {
             color: white;
         }
 
         .breadcrumb .breadcrumb-item a {
-            color: white !important; /* Set breadcrumb link text color to white */
             text-decoration: none;
             font-size: 0.875rem;
-        }
-
-        .breadcrumb .breadcrumb-item.active {
-            color: white !important; /* Set active breadcrumb text color to white */
         }
 
         .product-area {
@@ -144,9 +134,9 @@
             </div>
         </div> -->
 
-        <header class="shadow-sm p-4">
+        <header class="border-bottom p-3 py-4">
             <nav class="mb-4" aria-label="breadcrumb">
-                <ol class="breadcrumb">
+                <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item">
                         <a href="#">
                             <i style="font-size: 0.75rem" class="bi bi-chevron-left"></i> Tillbaka
