--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
         </div> -->
 
-        <header class="border-bottom p-3 py-4">
+        <header class="border-bottom p-4">
             <nav class="mb-4" aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item">
