--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             </div>
         </div> -->
 
-        <header class="border-bottom p-4">
-            <nav class="mb-4" aria-label="breadcrumb">
+        <header class="border-bottom">
+            <nav class="p-3 border-bottom" aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item">
                         <a href="#">
@@ -145,7 +145,7 @@
                 </ol>
             </nav>
 
-            <div>
+            <div class="p-4">
                 <h2 class="mb-2">REKO-ring Ankeborg</h2>
                 <div style="font-size: 0.75rem;"><i class="bi bi-calendar me-2"></i> Onsdag 24 April, 2024</div>
                 <div style="font-size: 0.75rem;"><i class="bi bi-geo-alt me-2"></i> Gräsandsvägen 11</div>
@@ -250,7 +250,7 @@
         </div>
 
         <footer class="footer">
-            <nav class="menu">
+            <nav class="menu p-3">
                 <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
