--- a/index.html
+++ b/index.html
@@ -46,30 +46,32 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            background-color: #333;
-        }
-
-        .menu {
-            display: flex;
-            justify-content: space-around;
-            padding: 10px 0;
+            background-color: #f8f9fa; /* Set background color for the footer */
+            text-align: center; /* Center align the content */
         }
 
         .menu ul {
-            list-style: none;
+            list-style-type: none; /* Remove default list styles */
+            padding: 0; /* Remove default padding */
             margin: 0;
-            padding: 0;
+            display: flex; /* Use flexbox to align items */
+            justify-content: space-around; /* Distribute items evenly */
         }
 
         .menu ul li {
-            display: inline;
+            width: 25%; /* Set equal width for each list item */
+            text-align: center; /* Center align the text */
+            font-size: 0.75rem; /* Set smaller font size */
         }
 
         .menu ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 14px;
-            padding: 5px 10px;
+            text-decoration: none; /* Remove underline from links */
+            color: inherit; /* Inherit text color */
+        }
+
+        .menu ul li i {
+            display: block; /* Make the icon a block element */
+            font-size: 1.25rem; /* Set icon size */
         }
 
         /* Custom styles for bottom-sliding modal */
@@ -119,8 +121,8 @@
     </style>
 
 </head>
-<div id="app" class="product-area">
-    <div class="container-auto">
+<div id="app" class="product-area bg-light">
+    <div class="container-sm bg-white p-0">
         
       
         <!-- Category filters -->
@@ -135,7 +137,7 @@
         </div> -->
 
         <header class="border-bottom">
-            <nav class="p-3 border-bottom" aria-label="breadcrumb">
+            <nav class="p-3 border-bottom bg-light" aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item">
                         <a href="#">
@@ -249,15 +251,15 @@
             </div>
         </div>
 
-        <footer class="footer">
+        <footer class="footer border-top">
             <nav class="menu p-3">
                 <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                  <li><i class="bi bi-house"></i><a href="#">Home</a></li>
+                  <li><i class="bi bi-info-circle"></i><a href="#">About</a></li>
+                  <li><i class="bi bi-gear"></i><a href="#">Services</a></li>
+                  <li><i class="bi bi-envelope"></i><a href="#">Contact</a></li>
                 </ul>
-            </nav>
+              </nav>
         </footer>
     </div>
 </div>
