--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            background-color: #f8f9fa; /* Set background color for the footer */
+            background-color: #fff; /* Set background color for the footer */
             text-align: center; /* Center align the content */
         }
 
@@ -137,7 +137,7 @@
         </div> -->
 
         <header class="border-bottom">
-            <nav class="p-3 border-bottom bg-light" aria-label="breadcrumb">
+            <nav class="p-2 border-bottom" aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item">
                         <a href="#">
@@ -252,7 +252,7 @@
         </div>
 
         <footer class="footer border-top">
-            <nav class="menu p-3">
+            <nav class="menu p-2">
                 <ul>
                   <li><i class="bi bi-house"></i><a href="#">Home</a></li>
                   <li><i class="bi bi-info-circle"></i><a href="#">About</a></li>
