--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
         </div> -->
 
-        <header class="border-bottom">
+        <header>
             <nav class="p-2 border-bottom" aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item">
@@ -147,8 +147,8 @@
                 </ol>
             </nav>
 
-            <div class="p-4">
-                <h2 class="mb-2">REKO-ring Ankeborg</h2>
+            <div class="p-4 pb-0">
+                <h3 class="mb-3">REKO-ring Ankeborg</h3>
                 <div style="font-size: 0.75rem;"><i class="bi bi-calendar me-2"></i> Onsdag 24 April, 2024</div>
                 <div style="font-size: 0.75rem;"><i class="bi bi-geo-alt me-2"></i> Gräsandsvägen 11</div>
                 <div style="font-size: 0.75rem;"><i class="bi bi-clock me-2"></i> 18.00-21.00</div>
@@ -159,7 +159,7 @@
             <button class="btn btn-primary mt-3" @click="openFormModal"><i class="bi bi-plus-lg"></i> Lägg till</button>   
         </div> -->
 
-        <div class="p-3">
+        <div class="p-4">
             <form class="mb-4">
                 <form>
                     <div class="input-group">
