--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
             newArticle: { title: '', description: '', category: '', image: '' },
             items: {
                 'Frukt': [
-                    { image: 'https://via.placeholder.com/150?text=Frukt+1', alt: 'Frukt Image 1' },
-                    { image: 'https://via.placeholder.com/150?text=Frukt+2', alt: 'Frukt Image 2' },
+                    { image: './frukt1.jpg', alt: 'Frukt Image 1' },
+                    { image: './frukt2.jpg', alt: 'Frukt Image 2' },
                     { image: 'https://via.placeholder.com/150?text=Frukt+3', alt: 'Frukt Image 3' },
                     { image: 'https://via.placeholder.com/150?text=Frukt+4', alt: 'Frukt Image 4' },
                     { image: 'https://via.placeholder.com/150?text=Frukt+5', alt: 'Frukt Image 5' }
