--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                   <li><i class="bi bi-house"></i><a href="#">Home</a></li>
                   <li><i class="bi bi-info-circle"></i><a href="#">About</a></li>
                   <li><i class="bi bi-gear"></i><a href="#">Services</a></li>
-                  <li><i class="bi bi-envelope"></i><a href="#">Contact</a></li>
+                  <li><i class="bi bi-cart2"></i><a href="#">Varukorg</a></li>
                 </ul>
               </nav>
         </footer>
