--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 
             <div class="p-4 pb-0">
                 <h3 class="mb-2">REKO-ring Ankeborg</h3>
-                <div style="font-size: 0.875rem;font-weight:500"><i class="bi bi-calendar me-2"></i> Onsdag 24 April, 2024</div>
-                <div style="font-size: 0.875rem;font-weight:500"><i class="bi bi-geo-alt me-2"></i> Gräsandsvägen 11</div>
-                <div style="font-size: 0.875rem;font-weight:500"><i class="bi bi-clock me-2"></i> 18.00 - 21.00</div>
+                <div style="font-size: 0.75rem;color:#656f79"><i class="bi bi-calendar me-2"></i> Onsdag 24 April, 2024</div>
+                <div style="font-size: 0.75rem;color:#656f79"><i class="bi bi-geo-alt me-2"></i> Gräsandsvägen 11</div>
+                <div style="font-size: 0.75rem;color:#656f79"><i class="bi bi-clock me-2"></i> 18.00 - 21.00</div>
             </div>
         </header>
 
