--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <!-- <div class="input-group-prepend">
                             <button class="btn btn-outline-secondary" type="button"><i class="bi bi-search"></i></button>
                         </div> -->
-                        <input type="text" class="form-control" placeholder="Sök">
+                        <input type="text" class="form-control rounded-pill" placeholder="Sök">
                     </div>
                 </form>
             </form>
@@ -183,7 +183,7 @@
                         <div class="glide__track" data-glide-el="track">
                             <ul class="glide__slides">
                                 <li class="glide__slide" v-for="(item, index) in category" :key="index">
-                                    <img @click="openFormModal" style="width:100%" :src="item.image" :alt="item.alt">
+                                    <img class="rounded-1" @click="openFormModal" style="width:100%" :src="item.image" :alt="item.alt">
                                 </li>
                             </ul>
                         </div>
