--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
             width: 20%; /* Adjust the width of the overlay */
             background: linear-gradient(to right, rgba(255, 255, 255, 0), white); /* Gradient from transparent to white */
         }
+
+        .form-control:focus {
+            border-color: #00d07d;
+            box-shadow: 0 0 0 0.25rem rgb(13 225 253 / 25%);
+        }
+        
     </style>
 
 </head>
