--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div v-for="(category, categoryName) in items" :key="categoryName" class="category">
                 <div class="d-flex justify-content-between align-items-end mb-2">
                     <h6 class="mb-0">{{ categoryName }}</h6>
-                    <a href="" style="font-size: 0.875rem;text-decoration:none;line-height: 1;">Se alla <i style="font-size: 0.75rem" class="bi bi-chevron-right"></i></a>
+                    <a href="" style="color:rgb(101, 111, 121);font-size: 0.875rem;text-decoration:none;line-height: 1;">Se alla <i style="font-size: 0.75rem" class="bi bi-chevron-right"></i></a>
                 </div>
                 <div class="w-100">
                     <div :id="'glide-' + categoryName" class="glide mb-4">
