--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 
     <style>
-
         .breadcrumb {
             color: white;
         }
@@ -21,6 +20,7 @@
         .breadcrumb .breadcrumb-item a {
             text-decoration: none;
             font-size: 0.875rem;
+            color: #656f79;
         }
 
         .product-area {
