--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </nav>
 
             <div class="p-4 pb-0">
-                <h3 class="mb-2">REKO-ring Ankeborg</h3>
+                <h3 class="mb-2">Ankeborg v. 14</h3>
                 <div class="mb-1" style="font-size: 0.875rem;color:#656f79"><i class="bi bi-calendar me-2"></i>Onsdag 24 April, 2024</div>
                 <div class="mb-1" style="font-size: 0.875rem;color:#656f79"><i style="color:#008117" class="bi bi-geo-alt-fill me-2"></i>Gräsandsvägen 11</div>
                 <div class="mb-1" style="font-size: 0.875rem;color:#656f79"><i class="bi bi-clock me-2"></i>18.00 - 21.00</div>
