--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             <nav class="p-2 border-bottom" aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item">
-                        <a href="#">
-                            <i style="font-size: 0.75rem" class="bi bi-chevron-left"></i> Tillbaka
+                        <a class="d-flex align-items-center" href="#">
+                            <i style="font-size: 0.75rem" class="bi bi-chevron-left me-1"></i>REKO-ringar
                         </a>
                     </li>
                 </ol>
