--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 
     <style>
+
+        header nav {
+            background-color: #003900;
+        }
+
         .breadcrumb {
             color: white;
         }
@@ -20,7 +25,7 @@
         .breadcrumb .breadcrumb-item a {
             text-decoration: none;
             font-size: 0.875rem;
-            color: #656f79;
+            color: white;
         }
 
         .product-area {
