--- a/index.html
+++ b/index.html
@@ -192,47 +192,13 @@
                 <div>
                   <div :id="'tiny-slider-' + categoryName" class="tiny-slider mb-4">
                     <div v-for="(item, index) in category" :key="index">
-                        <img class="rounded-1" @click="openFormModal" :src="item.image" :alt="item.alt">
+                        <img class="rounded-1" @click="openFormModal(item)":src="item.image" :alt="item.alt">
                     </div>
                   </div>
                 </div>
             </div>
-
-            <!-- <div v-for="(category, categoryName) in items" :key="categoryName" class="category">
-                <div class="d-flex justify-content-between align-items-end mb-2">
-                    <h6 class="mb-0">{{ categoryName }}</h6>
-                    <a href="" style="color:#008117;font-size: 0.875rem;text-decoration:none;line-height: 1;">Visa alla <i style="font-size: 0.75rem" class="bi bi-chevron-right"></i></a>
-                </div>
-                <div class="w-100">
-                    <div :id="'tiny-slider-' + categoryName" class="tiny-slider mb-4">
-                      <div class="slides" data-glide-el="track">
-                        <ul class="slides-list">
-                          <li v-for="(item, index) in category" :key="index">
-                            <img class="rounded-1" @click="openFormModal" :src="item.image" :alt="item.alt">
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                </div>
-            </div> -->
         </div>
             
-            
-        <!-- <div>
-            <div class="row">
-                <div v-for="article in filteredArticles" :key="article.id" class="col-lg-4 mb-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h4 class="card-title">{{ article.title }}</h4>
-                            <p class="card-text">{{ article.description }}</p>
-                            <p class="card-text">{{ article.category }}</p>
-                            <img :src="article.image" class="card-img-top" alt="Article Image">
-                        </div>
-                    </div>
-                </div>
-            </div>    
-        </div> -->
-
         <!-- <div class="d-flex align-items-center">
             <button class="btn btn-lg p-0" @click="openFacebookModal">
                 <i class="bi bi-facebook"></i>
@@ -394,10 +360,10 @@
                     gap: 16, // Adjust the gap between items
                 }).mount();
             },
-            openFormModal() {
+            openFormModal(item) {
                 // Open the modal for adding a new article
-                var myModal = new bootstrap.Modal(document.getElementById('addArticleModal'));
-                myModal.show();
+                var myModal = new bootstrap.Modal(document.getElementById('addArticleModal'))
+                myModal.show()
             },
             openFacebookModal() {
                 // Open the modal for Facebook
