--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                   <li><i class="bi bi-house"></i><a href="#">Home</a></li>
                   <li><i class="bi bi-info-circle"></i><a href="#">About</a></li>
                   <li><i class="bi bi-gear"></i><a href="#">Services</a></li>
-                  <li><i class="bi bi-cart2"></i><a href="#">Varukorg</a></li>
+                  <li @click="openFormModal"><i class="bi bi-cart2"></i><a href="#">Varukorg</a></li>
                 </ul>
               </nav>
         </footer>
@@ -330,7 +330,6 @@
                         items: 2,
                         gutter: 10,
                         mouseDrag: true,
-                        swipeAngle: false,
                         autoplay: false,
                         controls: false,
                         nav: false,
