--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
                         autoplay: false,
                         controls: false,
                         nav: false,
+                        preventScrollOnTouch: "force"
                     })
                 } else {
                     console.warn(`Element with ID #tiny-slider-${categoryName} not found.`);
