--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         autoplay: false,
                         controls: false,
                         nav: false,
-                        preventScrollOnTouch: "force"
+                        preventScrollOnTouch: "auto"
                     })
                 } else {
                     console.warn(`Element with ID #tiny-slider-${categoryName} not found.`);
