--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
         </div> -->
 
-        <header class="bg-white border-bottom">
+        <header class="bg-white">
             <nav class="p-3 border-bottom" aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item">
@@ -242,7 +242,7 @@
                         <!-- <div class="input-group-prepend">
                             <button class="btn btn-outline-secondary" type="button"><i class="bi bi-search"></i></button>
                         </div> -->
-                        <input type="text" class="search form-control rounded-pill border" placeholder="Sök">
+                        <input type="text" class="search form-control rounded-pill" placeholder="Sök">
                     </div>
                 </form>
             </form>
