--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
     
     <style>
 
-        .search {
-            border: 1px solid #ededed !important;
-        }
-
         .border-bottom {
             border-bottom: 1px solid #ededed !important;
         }
@@ -212,7 +208,7 @@
             </div>
         </div> -->
 
-        <header class="bg-white">
+        <header class="">
             <nav class="p-3 border-bottom" aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
                     <li class="breadcrumb-item">
@@ -223,7 +219,7 @@
                 </ol>
             </nav>
 
-            <div style="padding:2rem">
+            <div class="bg-white" style="padding:2rem;">
                 <h1 class="mb-2">Ankeborg v. 14</h1>
                 <div style="font-size: 0.875rem;color:#656f79"><i style="color:#008117"  class="bi bi-calendar me-2"></i><span style="color:#212529;font-weight:500">Onsdag 24 April, 2024</span></div>
                 <div style="font-size: 0.875rem;color:#656f79"><i style="color:#008117" class="bi bi-geo-alt-fill me-2"></i>Gräsandsvägen 11</div>
