--- a/index.html
+++ b/index.html
@@ -179,7 +179,6 @@
             width: 100%;
             height: 50%;
             color: #212529;
-            font-size: 16px;
             background-color: white;
         }
 
@@ -257,8 +256,8 @@
                             <img :src="item.image" :alt="item.alt">
                             <!-- <div class="image-overlay"></div> -->
                             <div class="text-bottom p-3">
-                                <div style="font-size:0.875rem">Fruktpåse</div>
-                                <div class="ms-auto" style="font-size:1.125rem;font-weight:500">39 kr <span style="font-weight:400;font-size:0.875rem;color:#656f79">/ st</span></div>
+                                <div style="font-size:0.875rem">{{ item.title }}</div>
+                                <div class="ms-auto" style="font-size:1.125rem;font-weight:500">{{ item.price }} kr <span style="font-weight:400;font-size:0.875rem;color:#656f79">/ st</span></div>
                             </div>
                         </div>
                     </div>
@@ -342,8 +341,8 @@
             newArticle: { title: '', description: '', category: '', image: '' },
             items: {
                 'Frukt': [
-                    { image: './frukt1.jpg', alt: 'Frukt Image 1' },
-                    { image: './frukt2.jpg', alt: 'Frukt Image 2' },
+                    { title: 'Klementiner', image: './frukt1.jpg', alt: 'Frukt Image 1', price: 169 },
+                    { title: 'Jordgubbar', image: './frukt2.jpg', alt: 'Frukt Image 2', price: 49 },
                     { image: 'https://via.placeholder.com/150?text=Frukt+3', alt: 'Frukt Image 3' },
                     { image: 'https://via.placeholder.com/150?text=Frukt+4', alt: 'Frukt Image 4' },
                     { image: 'https://via.placeholder.com/150?text=Frukt+5', alt: 'Frukt Image 5' }
