--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     
     <style>
 
+        .event {
+            border-radius: 0.75rem;
+            background-color: #fff7e1;
+        }
+
         .border-bottom {
             border-bottom: 1px solid #ededed !important;
         }
@@ -139,10 +144,9 @@
             box-shadow: 0 0 0 0.25rem rgb(13 225 253 / 25%);
         }
 
-
         .image-container {
             position: relative;
-            border-radius: 10px; /* Adjust as needed */
+            border-radius: 0.75rem; /* Adjust as needed */
             overflow: hidden;
         }
 
@@ -219,14 +223,12 @@
             </nav>
 
             <div class="bg-white p-3">
-
-                <div class="p-4 rounded-bottom" style="background-color: #fff9e8">
+                <div class="p-4 event">
                     <h1 style="color:#993a00" class="mb-2">Ankeborg v. 14</h1>
                     <div style="font-size: 0.875rem;color:#656f79"><i style="color:#212529" class="bi bi-calendar me-2"></i><span style="color:#212529;font-weight:500">Onsdag 24 April, 2024</span></div>
-                    <div style="font-size: 0.875rem;color:#656f79"><i style="color:#212529" class="bi bi-geo-alt-fill me-2"></i>Gräsandsvägen 11</div>
-                    <div style="font-size: 0.875rem;color:#656f79"><i style="color:#212529" class="bi bi-clock me-2"></i>18.00 - 21.00</div>
+                    <div style="font-size: 0.875rem;"><i style="color:#212529" class="bi bi-clock me-2"></i>18.00 - 21.00</div>
+                    <div style="font-size: 0.875rem;"><i style="color:#212529" class="bi bi-geo-alt-fill me-2"></i>Gräsandsvägen 11</div>
                 </div>
-                
             </div>
         </header>
 
