--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 
     
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        
+
+        body {
+            font-family: "Roboto", sans-serif;
+        }
+
+        .quattrocento-bold {
+            font-family: "Quattrocento", serif;
+            font-weight: 700;
+            font-style: normal;
+        }
 
         .event {
             border-radius: 0.75rem;
@@ -224,7 +237,7 @@
 
             <div class="bg-white p-3">
                 <div class="p-4 event">
-                    <h1 style="color:#993a00" class="mb-2">Ankeborg v. 14</h1>
+                    <h1 style="color:#993a00" class="mb-1 quattrocento-bold">Karlstad City</h1>
                     <div style="font-size: 0.875rem;color:#656f79"><i style="color:#212529" class="bi bi-calendar me-2"></i><span style="color:#212529;font-weight:500">Onsdag 24 April, 2024</span></div>
                     <div style="font-size: 0.875rem;"><i style="color:#212529" class="bi bi-clock me-2"></i>18.00 - 21.00</div>
                     <div style="font-size: 0.875rem;"><i style="color:#212529" class="bi bi-geo-alt-fill me-2"></i>Gräsandsvägen 11</div>
@@ -248,7 +261,7 @@
                 </form>
             </form>
 
-            <h4 class="mt-3 mb-3">Veckans varor</h4>
+            <h4 class="mt-3 mb-3 quattrocento-bold">Veckans varor</h4>
 
             <div v-for="(category, categoryName) in items" :key="categoryName" class="category">
                 <div class="d-flex justify-content-between align-items-end me-3">
