--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             background-color: #fff7e1;
         }
 
+        .event h1 {
+            color: maroon;
+        }
+
         .border-bottom {
             border-bottom: 1px solid #ededed !important;
         }
@@ -237,10 +241,10 @@
 
             <div class="bg-white p-3">
                 <div class="p-4 event">
-                    <h1 style="color:#993a00" class="mb-1 quattrocento-bold">Karlstad City</h1>
-                    <div style="font-size: 0.875rem;color:#656f79"><i style="color:#212529" class="bi bi-calendar me-2"></i><span style="color:#212529;font-weight:500">Onsdag 24 April, 2024</span></div>
-                    <div style="font-size: 0.875rem;"><i style="color:#212529" class="bi bi-clock me-2"></i>18.00 - 21.00</div>
-                    <div style="font-size: 0.875rem;"><i style="color:#212529" class="bi bi-geo-alt-fill me-2"></i>Gräsandsvägen 11</div>
+                    <h1 class="mb-1 quattrocento-bold">Karlstad City</h1>
+                    <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-calendar me-2"></i>Onsdag 24 April, 2024</div>
+                    <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-clock me-2"></i>18.00 - 21.00</div>
+                    <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-geo-alt me-2"></i>Gräsandsvägen 11</div>
                 </div>
             </div>
         </header>
