--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         <!-- <div class="input-group-prepend">
                             <button class="btn btn-outline-secondary" type="button"><i class="bi bi-search"></i></button>
                         </div> -->
-                        <input type="text" class="search form-control rounded-pill" placeholder="Sök">
+                        <input type="text" class="search form-control rounded-pill border-0" placeholder="Sök">
                     </div>
                 </form>
             </form>
