--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             <!-- <div class="image-overlay"></div> -->
                             <div class="text-bottom p-3">
                                 <div style="font-size:0.875rem">{{ item.title }}</div>
-                                <div v-if="item.price" class="ms-auto" style="color:maroon;font-size:1.125rem;font-weight:500">{{ item.price }} kr <span style="font-weight:400;font-size:0.875rem;color:#656f79">/ st</span></div>
+                                <div v-if="item.price" class="ms-auto" style="color:#e5554f;font-size:1.125rem;font-weight:600">{{ item.price }} kr <span style="font-weight:400;font-size:0.875rem;color:#656f79">/ st</span></div>
                             </div>
                         </div>
                     </div>
