--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             background-color: #fff7e1;
         }
 
+        .ornament {
+            opacity: 0.1;
+            width: 100%;
+        }
+
         .event h1 {
             color: maroon;
         }
@@ -239,8 +244,10 @@
                 </ol>
             </nav>
 
-            <div class="bg-white p-3">
-                <div class="p-4 event">
+            <img class="ornament" src="./ornament2.png" >
+
+            <div class="bg-white p-3 pt-0">
+                <div class="p-4 event" style="position: relative;">
                     <h1 class="mb-1 quattrocento-bold">Karlstad City</h1>
                     <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-calendar me-2"></i>Onsdag 24 April, 2024</div>
                     <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-clock me-2"></i>18.00 - 21.00</div>
