--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
                 </ol>
             </nav>
 
-            <img class="ornament" src="./ornament2.png" >
+            <!-- <img class="ornament" src="./ornament2.png" > -->
 
-            <div class="bg-white p-3 pt-0">
+            <div class="bg-white p-3">
                 <div class="p-4 event" style="position: relative;">
                     <h1 class="mb-1 quattrocento-bold">Karlstad City</h1>
                     <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-calendar me-2"></i>Onsdag 24 April, 2024</div>
