--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         }
 
         .event {
+            position: relative;
+            top: -4rem;
             border-radius: 0.75rem;
             background-color: #fff7e1;
         }
@@ -253,9 +255,14 @@
 
             <!-- <img class="ornament" src="./ornament2.png" > -->
 
+            <div style="height:100px;overflow:hidden">
+                <img src="karlstad.jpg" style="width:100%"/>
+            </div>
+
             <div class="bg-white p-3">
                 <div class="p-4 event" style="position: relative;">
-                    <h2 class="mb-1">Karlstad City</h2>
+                    <label class="mb-1" style="font-size: 0.875rem">Kommande:</label>
+                    <h2 class="mb-2">Karlstad City</h2>
                     <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-calendar me-2"></i>Onsdag 24 April, 2024</div>
                     <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-clock me-2"></i>18.00 - 21.00</div>
                     <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-geo-alt me-2"></i>Gräsandsvägen 11</div>
@@ -267,7 +274,7 @@
             <button class="btn btn-primary mt-3" @click="openFormModal"><i class="bi bi-plus-lg"></i> Lägg till</button>   
         </div> -->
 
-        <div class="bg-light p-4 pe-0">
+        <div class="bg-light p-4">
             <form class="mb-4 me-3">
                 <form>
                     <div class="input-group">
@@ -279,7 +286,14 @@
                 </form>
             </form>
 
-            <h3 class="mt-3 mb-3">Veckans varor</h3>
+            <!-- <h3 class="mt-3 mb-3">Veckans varor</h3> -->
+            <div class="btn-group w-100 mb-3 me-3" role="group" aria-label="Basic radio toggle button group">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                <label class="btn btn-outline-secondary" for="btnradio1">Veckans varor</label>
+              
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                <label class="btn btn-outline-secondary" for="btnradio2">Alla producenter</label>
+              </div>
 
             <div v-for="(category, categoryName) in items" :key="categoryName" class="category">
                 <div class="d-flex justify-content-between align-items-end me-3">
@@ -294,7 +308,7 @@
                             <!-- <div class="image-overlay"></div> -->
                             <div class="text-bottom p-3">
                                 <div style="font-size:0.875rem">{{ item.title }}</div>
-                                <div v-if="item.price" class="ms-auto" style="color:#e5554f;font-size:1.125rem;font-weight:600">{{ item.price }} kr <span style="font-weight:400;font-size:0.875rem;color:#656f79">/ st</span></div>
+                                <div v-if="item.price" class="ms-auto" style="font-size:1.125rem;font-weight:600">{{ item.price }} kr <span style="font-weight:400;font-size:0.875rem;color:#656f79">/ st</span></div>
                             </div>
                         </div>
                     </div>
