--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         }
 
         .event {
-            position: relative;
-            top: -4rem;
+            overflow: hidden;
             border-radius: 0.75rem;
             background-color: #fff7e1;
         }
@@ -254,18 +253,18 @@
             </nav>
 
             <!-- <img class="ornament" src="./ornament2.png" > -->
-
-            <div style="height:100px;overflow:hidden">
-                <img src="karlstad.jpg" style="width:100%"/>
-            </div>
-
-            <div class="bg-white p-3">
-                <div class="p-4 event" style="position: relative;">
-                    <label class="mb-1" style="font-size: 0.875rem">Kommande:</label>
-                    <h2 class="mb-2">Karlstad City</h2>
-                    <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-calendar me-2"></i>Onsdag 24 April, 2024</div>
-                    <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-clock me-2"></i>18.00 - 21.00</div>
-                    <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-geo-alt me-2"></i>Gräsandsvägen 11</div>
+            <div class="bg-white p-4">
+                <div class="event shadow-sm " style="position: relative;">
+                    <div style="height:100px;overflow:hidden">
+                        <img src="karlstad.jpg" style="width:100%"/>
+                    </div>
+                    <div class="p-4">
+                        <h2 class="mb-2">Karlstad City</h2>
+                        <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-calendar me-2"></i>Onsdag 24 April, 2024</div>
+                        <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-clock me-2"></i>18.00 - 21.00</div>
+                        <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-geo-alt me-2"></i>Gräsandsvägen 11</div>
+                    </div>
+                    
                 </div>
             </div>
         </header>
@@ -287,13 +286,13 @@
             </form>
 
             <!-- <h3 class="mt-3 mb-3">Veckans varor</h3> -->
-            <div class="btn-group w-100 mb-3 me-3" role="group" aria-label="Basic radio toggle button group">
+            <!-- <div class="btn-group w-100 mb-3 me-3" role="group" aria-label="Basic radio toggle button group">
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
                 <label class="btn btn-outline-secondary" for="btnradio1">Veckans varor</label>
               
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
                 <label class="btn btn-outline-secondary" for="btnradio2">Alla producenter</label>
-              </div>
+            </div> -->
 
             <div v-for="(category, categoryName) in items" :key="categoryName" class="category">
                 <div class="d-flex justify-content-between align-items-end me-3">
