--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
             <!-- <img class="ornament" src="./ornament2.png" > -->
             <div class="bg-white p-4">
-                <div class="event shadow-sm " style="position: relative;">
+                <div class="event" style="position: relative;">
                     <div style="height:100px;overflow:hidden">
                         <img src="karlstad.jpg" style="width:100%"/>
                     </div>
