--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         .event {
             overflow: hidden;
             border-radius: 0.75rem;
-            background-color: #fff7e1;
+            /* background-color: #fff7e1; */
         }
 
         .ornament {
@@ -227,7 +227,7 @@
 <body>
 
 <div id="app">
-    <div class="p-0">
+    <div class="">
         
       
         <!-- Category filters -->
@@ -253,9 +253,9 @@
             </nav>
 
             <!-- <img class="ornament" src="./ornament2.png" > -->
-            <div class="bg-white p-4">
-                <div class="event" style="position: relative;">
-                    <div style="height:100px;overflow:hidden">
+            <div class="p-3 bg-light">
+                <div class="event bg-white" style="position:relative;">
+                    <div style="height:200px;overflow:hidden">
                         <img src="karlstad.jpg" style="width:100%"/>
                     </div>
                     <div class="p-4">
@@ -273,7 +273,9 @@
             <button class="btn btn-primary mt-3" @click="openFormModal"><i class="bi bi-plus-lg"></i> Lägg till</button>   
         </div> -->
 
-        <div class="bg-light p-4">
+        <div class="bg-light p-3">
+            <h3 class="mb-3">Veckans varor</h3>
+
             <form class="mb-4 me-3">
                 <form>
                     <div class="input-group">
@@ -285,7 +287,6 @@
                 </form>
             </form>
 
-            <!-- <h3 class="mt-3 mb-3">Veckans varor</h3> -->
             <!-- <div class="btn-group w-100 mb-3 me-3" role="group" aria-label="Basic radio toggle button group">
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
                 <label class="btn btn-outline-secondary" for="btnradio1">Veckans varor</label>
