--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1));
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(0 0 0 / 50%));
         }
 
         .form-control:focus {
@@ -253,9 +253,10 @@
             </nav>
 
             <!-- <img class="ornament" src="./ornament2.png" > -->
-            <div class="p-3 bg-light">
+            <div class="p-3 pb-0 bg-light">
                 <div class="event bg-white" style="position:relative;">
-                    <div style="height:200px;overflow:hidden">
+                    <div style="height:100px;overflow:hidden;position:relative">
+                        <div class="image-overlay"></div>
                         <img src="karlstad.jpg" style="width:100%"/>
                     </div>
                     <div class="p-4">
@@ -274,7 +275,7 @@
         </div> -->
 
         <div class="bg-light p-3">
-            <h3 class="mb-3">Veckans varor</h3>
+            <!-- <h4 class="mb-3">Veckans utbud</h4> -->
 
             <form class="mb-4 me-3">
                 <form>
@@ -297,7 +298,7 @@
 
             <div v-for="(category, categoryName) in items" :key="categoryName" class="category">
                 <div class="d-flex justify-content-between align-items-end me-3">
-                    <h5 class="mb-0 caveat-brush-regular">{{ categoryName }}</h5>
+                    <h3 class="mb-0 caveat-brush-regular">{{ categoryName }}</h3>
                     <a href="" style="color:#656f79;font-size: 0.875rem;text-decoration:none;line-height: 1">Visa alla <i style="font-size: 0.75rem" class="bi bi-chevron-right"></i></a>
                 </div>
                 <div>
