--- a/index.html
+++ b/index.html
@@ -277,16 +277,16 @@
         <div class="bg-light p-3">
             <!-- <h4 class="mb-3">Veckans utbud</h4> -->
 
-            <form class="mb-4 me-3">
-                <form>
-                    <div class="input-group">
-                        <!-- <div class="input-group-prepend">
-                            <button class="btn btn-outline-secondary" type="button"><i class="bi bi-search"></i></button>
-                        </div> -->
-                        <input type="text" class="search form-control rounded-pill border-0" placeholder="Sök">
-                    </div>
-                </form>
+         
+            <form class="mb-3">
+                <div class="input-group">
+                    <!-- <div class="input-group-prepend">
+                        <button class="btn btn-outline-secondary" type="button"><i class="bi bi-search"></i></button>
+                    </div> -->
+                    <input type="text" class="search form-control rounded-pill border-0" placeholder="Sök">
+                </div>
             </form>
+        
 
             <!-- <div class="btn-group w-100 mb-3 me-3" role="group" aria-label="Basic radio toggle button group">
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
