--- a/index.html
+++ b/index.html
@@ -47,20 +47,12 @@
             width: 100%;
         }
 
-        .event h2 {
-            color: maroon;
-        }
-
         .border-bottom {
             border-bottom: 1px solid #ededed !important;
         }
 
         .border-top {
             border-top: 1px solid #ededed !important;
-        }
-
-        .shadow-sm {
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1) !important;
         }
 
         header nav {
@@ -297,15 +289,16 @@
             </div> -->
 
             <div v-for="(category, categoryName) in items" :key="categoryName" class="category">
-                <div class="d-flex justify-content-between align-items-end me-3">
+                <div class="d-flex justify-content-between align-items-end">
                     <h3 class="mb-0 caveat-brush-regular">{{ categoryName }}</h3>
                     <a href="" style="color:#656f79;font-size: 0.875rem;text-decoration:none;line-height: 1">Visa alla <i style="font-size: 0.75rem" class="bi bi-chevron-right"></i></a>
                 </div>
                 <div>
-                  <div :id="'tiny-slider-' + categoryName" class="tiny-slider mb-4 ps-">
+                  <div :id="'tiny-slider-' + categoryName" class="tiny-slider mb-4">
                     <div v-for="(item, index) in category" :key="index" @click.stop="openFormModal(item)">
                         <div class="image-container shadow-sm">
-                            <img :src="item.image" :alt="item.alt">
+                            <img v-if="item.image" :src="item.image" :alt="item.alt">
+                            <div class="bg-white" v-else style="height:150px;width:150px"></div>
                             <!-- <div class="image-overlay"></div> -->
                             <div class="text-bottom p-3">
                                 <div style="font-size:0.875rem">{{ item.title }}</div>
@@ -401,32 +394,13 @@
             items: {
                 'Frukt': [
                     { title: 'Klementiner', image: './frukt1.jpg', description: 'Ekologiskt odlade klementiner i påsar med 10st i varje påse.', price: 169 },
-                    { title: 'Jordgubbar', image: './frukt2.jpg', description: 'Ekologiskt odlade jordgubbar i box. (Ca 1 liter).', price: 49 },
-                    { image: 'https://via.placeholder.com/150?text=Frukt+3', alt: 'Frukt Image 3' },
-                    { image: 'https://via.placeholder.com/150?text=Frukt+4', alt: 'Frukt Image 4' },
-                    { image: 'https://via.placeholder.com/150?text=Frukt+5', alt: 'Frukt Image 5' }
+                    { title: 'Jordgubbar', image: './frukt2.jpg', description: 'Ekologiskt odlade jordgubbar i box. (Ca 1 liter).', price: 49 }
                 ],
                 'Grönsaker': [
-                    { image: 'https://via.placeholder.com/150?text=Gr%C3%B6nsaker+1', alt: 'Grönsaker Image 1' },
-                    { image: 'https://via.placeholder.com/150?text=Gr%C3%B6nsaker+2', alt: 'Grönsaker Image 2' },
-                    { image: 'https://via.placeholder.com/150?text=Gr%C3%B6nsaker+3', alt: 'Grönsaker Image 3' },
-                    { image: 'https://via.placeholder.com/150?text=Gr%C3%B6nsaker+4', alt: 'Grönsaker Image 4' },
-                    { image: 'https://via.placeholder.com/150?text=Gr%C3%B6nsaker+5', alt: 'Grönsaker Image 5' }
+                    { image: null, alt: 'Grönsaker Image 1' }
                 ],
-                'Mejeriprodukter': [
-                    { image: 'https://via.placeholder.com/150?text=Mejeriprodukter+1', alt: 'Mejeriprodukter Image 1' },
-                    { image: 'https://via.placeholder.com/150?text=Mejeriprodukter+2', alt: 'Mejeriprodukter Image 2' },
-                    { image: 'https://via.placeholder.com/150?text=Mejeriprodukter+3', alt: 'Mejeriprodukter Image 3' },
-                    { image: 'https://via.placeholder.com/150?text=Mejeriprodukter+4', alt: 'Mejeriprodukter Image 4' },
-                    { image: 'https://via.placeholder.com/150?text=Mejeriprodukter+5', alt: 'Mejeriprodukter Image 5' }
-                ],
-                'Kött': [
-                    { image: 'https://via.placeholder.com/150?text=Frukt+1', alt: 'Frukt Image 1' },
-                    { image: 'https://via.placeholder.com/150?text=Frukt+2', alt: 'Frukt Image 2' },
-                    { image: 'https://via.placeholder.com/150?text=Frukt+3', alt: 'Frukt Image 3' },
-                    { image: 'https://via.placeholder.com/150?text=Frukt+4', alt: 'Frukt Image 4' },
-                    { image: 'https://via.placeholder.com/150?text=Frukt+5', alt: 'Frukt Image 5' }
-                ]
+                'Mejeriprodukter': [],
+                'Kött': []
             }
         },
         mounted() {
