--- a/index.html
+++ b/index.html
@@ -245,10 +245,9 @@
             </nav>
 
             <!-- <img class="ornament" src="./ornament2.png" > -->
-            <div class="p-3 pb-0 bg-light">
+            <div class="bg-light">
                 <div class="event bg-white" style="position:relative;">
                     <div style="height:100px;overflow:hidden;position:relative">
-                        <div class="image-overlay"></div>
                         <img src="karlstad.jpg" style="width:100%"/>
                     </div>
                     <div class="p-4">
@@ -257,7 +256,6 @@
                         <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-clock me-2"></i>18.00 - 21.00</div>
                         <div style="font-size: 0.875rem"><i style="color:#212529" class="bi bi-geo-alt me-2"></i>Gräsandsvägen 11</div>
                     </div>
-                    
                 </div>
             </div>
         </header>
