--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
 <div id="app">
 
     <div class="d-flex flex-column vh-100">
-        <div class="split-screen top text-center align-items-center d-flex justify-content-center" style="height: 50%;background-color: #fcfff0;">
+        <div class="split-screen top text-center align-items-center d-flex justify-content-center" style="height: 50vh;background-color: #fcfff0;">
           <a href="#" class="text-decoration-none text-dark bebas-neue-regular" style="font-size: 6rem;color:#001600">KÖP</a>
         </div>
-        <div class="split-screen bottom text-center align-items-center d-flex justify-content-center" style="height: 50%;background-color: #001600;">
+        <div class="split-screen bottom text-center align-items-center d-flex justify-content-center" style="height: 50vh;background-color: #001600;">
           <a href="#" class="text-decoration-none text-white bebas-neue-regular" style="font-size: 6rem;">SÄLJ</a>
         </div>
     </div>
