--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         }
 
         .my-container {
-            height: 100dvh; 
+            height: 100dvh !important; 
         }
 
         .slide-up-enter-active, .slide-up-leave-active {
