--- a/index.html
+++ b/index.html
@@ -47,12 +47,8 @@
             border-top: 1px solid #ededed !important;
         }
 
-        header ul.nav {
-            background-color: white !important;
-        }
-
         .nav-item a {
-            color: #212529;
+            color: #001600;
         }
 
         .breadcrumb .breadcrumb-item a {
@@ -184,7 +180,6 @@
             left: 0;
             width: 100%;
             padding: 10px;
-            color: white;
             font-size: 16px;
             text-align: center;
             /* background-color: rgba(0, 0, 0, 0.5); */
@@ -196,7 +191,6 @@
             left: 0;
             width: 100%;
             height: 50%;
-            color: #212529;
             background-color: white;
         }
 
@@ -250,6 +244,13 @@
         </transition> -->
 
         <div class="d-flex my-container flex-column">
+          <header style="position:fixed;top:0;left:0;right:0;z-index:1">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link p-3" href="#"><i class="bi bi-list me-2"></i></a>
+                    </li>
+                </ul>
+          </header>
           <transition name="slide-up">
             <div v-if="topVisible" @click="handleClickTop" class="split-screen top text-center align-items-center d-flex justify-content-center" style="height: 50vh;background-color: #fcfff0;">
               <a href="#" class="text-decoration-none text-dark bebas-neue-regular" style="font-size: 6rem;color:#001600">KÖP</a>
@@ -257,7 +258,7 @@
            </transition>
           <transition name="slide-down">
             <div v-if="bottomVisible" @click="handleClickBottom" class="split-screen bottom text-center align-items-center d-flex justify-content-center" style="height: 50vh;background-color: #001600;">
-              <a href="#" class="text-decoration-none text-white bebas-neue-regular" style="font-size: 6rem;">SÄLJ</a>
+              <a href="#" class="text-decoration-none bebas-neue-regular" style="font-size: 6rem;color: #fcfff0;">SÄLJ</a>
             </div>
           </transition> 
         </div>
